server/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID L_KEY variables functions mainBody R_KEY
Rule 2     mainBody -> MAIN L_PAR R_PAR L_KEY variables statements R_KEY
Rule 3     body -> L_KEY statements R_KEY
Rule 4     variables -> <empty>
Rule 5     variables -> VAR type ID DOT_COMMA variables
Rule 6     variables -> VAR type ID L_BRACK INTEGER R_BRACK DOT_COMMA variables
Rule 7     functions -> <empty>
Rule 8     functions -> FUNCTION type ID L_PAR functionsHelp R_PAR L_KEY variables statements R_KEY
Rule 9     functionsHelp -> <empty>
Rule 10    functionsHelp -> type ID
Rule 11    functionsHelp -> type ID COMMA functionsHelp2
Rule 12    functionsHelp2 -> type ID
Rule 13    functionsHelp2 -> type ID COMMA functionsHelp2
Rule 14    type -> INT
Rule 15    type -> DECIM
Rule 16    type -> BOOL
Rule 17    type -> CHAR
Rule 18    type -> STRING
Rule 19    type -> VOID
Rule 20    statements -> <empty>
Rule 21    statements -> statement statements
Rule 22    statement -> <empty>
Rule 23    statement -> assignment DOT_COMMA
Rule 24    statement -> functionCall DOT_COMMA
Rule 25    statement -> ifBlock
Rule 26    statement -> whileBlock
Rule 27    statement -> print DOT_COMMA
Rule 28    statement -> read DOT_COMMA
Rule 29    statement -> lineComment
Rule 30    statement -> return DOT_COMMA
Rule 31    return -> RETURN megaExp
Rule 32    assignment -> idCall ASSIGN megaExp
Rule 33    assignment -> idCall ASSIGN functionCall
Rule 34    assignment -> assignIncr
Rule 35    assignment -> assignDecr
Rule 36    assignIncr -> idCall INCREMENT
Rule 37    assignDecr -> idCall DECREMENT
Rule 38    functionCall -> ID L_PAR functionCallParams R_PAR
Rule 39    functionCallParams -> <empty>
Rule 40    functionCallParams -> functionCallParamsOptional
Rule 41    functionCallParamsOptional -> megaExp COMMA functionCallParamsOptional
Rule 42    functionCallParamsOptional -> megaExp
Rule 43    ifBlock -> IF L_PAR megaExp R_PAR body optionalElse
Rule 44    optionalElse -> <empty>
Rule 45    optionalElse -> ELSE body
Rule 46    whileBlock -> WHILE L_PAR megaExp R_PAR body
Rule 47    megaExp -> superExp
Rule 48    megaExp -> superExp AND superExp
Rule 49    megaExp -> superExp OR superExp
Rule 50    superExp -> exp
Rule 51    superExp -> exp MORE_THAN exp
Rule 52    superExp -> exp LESS_THAN exp
Rule 53    superExp -> exp MORE_EQUAL exp
Rule 54    superExp -> exp LESS_EQUAL exp
Rule 55    superExp -> exp EQUAL exp
Rule 56    superExp -> exp NOT_EQUAL exp
Rule 57    exp -> term
Rule 58    exp -> term PLUS exp
Rule 59    exp -> term MINUS exp
Rule 60    term -> factor
Rule 61    term -> factor TIMES term
Rule 62    term -> factor DIVIDE term
Rule 63    term -> factor MOD term
Rule 64    factor -> INTEGER
Rule 65    factor -> DECIMAL
Rule 66    factor -> ALPHANUMERIC
Rule 67    factor -> CHARACTER
Rule 68    factor -> BOOLEAN
Rule 69    factor -> idCall
Rule 70    factor -> L_PAR megaExp R_PAR
Rule 71    factor -> functionCall
Rule 72    idCall -> ID
Rule 73    idCall -> ID L_BRACK exp R_BRACK
Rule 74    print -> PRINT L_PAR print_help R_PAR
Rule 75    print_help -> <empty>
Rule 76    print_help -> ALPHANUMERIC
Rule 77    print_help -> idCall
Rule 78    print_help -> functionCall
Rule 79    print_help -> megaExp
Rule 80    read -> READ L_PAR idCall R_PAR
Rule 81    lineComment -> COMMENT_LINE ALPHANUMERIC END_LINE

Terminals, with rules where they appear

ALPHANUMERIC         : 66 76 81
AND                  : 48
ASSIGN               : 32 33
BOOL                 : 16
BOOLEAN              : 68
CHAR                 : 17
CHARACTER            : 67
COMMA                : 11 13 41
COMMENT_LINE         : 81
DECIM                : 15
DECIMAL              : 65
DECREMENT            : 37
DIVIDE               : 62
DOT_COMMA            : 5 6 23 24 27 28 30
ELSE                 : 45
END_LINE             : 81
EQUAL                : 55
FUNCTION             : 8
ID                   : 1 5 6 8 10 11 12 13 38 72 73
IF                   : 43
INCREMENT            : 36
INT                  : 14
INTEGER              : 6 64
LESS_EQUAL           : 54
LESS_THAN            : 52
L_BRACK              : 6 73
L_KEY                : 1 2 3 8
L_PAR                : 2 8 38 43 46 70 74 80
MAIN                 : 2
MINUS                : 59
MOD                  : 63
MORE_EQUAL           : 53
MORE_THAN            : 51
NOT_EQUAL            : 56
OR                   : 49
PLUS                 : 58
PRINT                : 74
PROGRAM              : 1
READ                 : 80
RETURN               : 31
R_BRACK              : 6 73
R_KEY                : 1 2 3 8
R_PAR                : 2 8 38 43 46 70 74 80
STRING               : 18
TIMES                : 61
VAR                  : 5 6
VOID                 : 19
WHILE                : 46
error                : 

Nonterminals, with rules where they appear

assignDecr           : 35
assignIncr           : 34
assignment           : 23
body                 : 43 45 46
exp                  : 50 51 51 52 52 53 53 54 54 55 55 56 56 58 59 73
factor               : 60 61 62 63
functionCall         : 24 33 71 78
functionCallParams   : 38
functionCallParamsOptional : 40 41
functions            : 1
functionsHelp        : 8
functionsHelp2       : 11 13
idCall               : 32 33 36 37 69 77 80
ifBlock              : 25
lineComment          : 29
mainBody             : 1
megaExp              : 31 32 41 42 43 46 70 79
optionalElse         : 43
print                : 27
print_help           : 74
program              : 0
read                 : 28
return               : 30
statement            : 21
statements           : 2 3 8 21
superExp             : 47 48 48 49 49
term                 : 57 58 59 61 62 63
type                 : 5 6 8 10 11 12 13
variables            : 1 2 5 6 8
whileBlock           : 26

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID L_KEY variables functions mainBody R_KEY

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID L_KEY variables functions mainBody R_KEY

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . L_KEY variables functions mainBody R_KEY

    L_KEY           shift and go to state 4


state 4

    (1) program -> PROGRAM ID L_KEY . variables functions mainBody R_KEY
    (4) variables -> .
    (5) variables -> . VAR type ID DOT_COMMA variables
    (6) variables -> . VAR type ID L_BRACK INTEGER R_BRACK DOT_COMMA variables

    FUNCTION        reduce using rule 4 (variables -> .)
    MAIN            reduce using rule 4 (variables -> .)
    VAR             shift and go to state 6

    variables                      shift and go to state 5

state 5

    (1) program -> PROGRAM ID L_KEY variables . functions mainBody R_KEY
    (7) functions -> .
    (8) functions -> . FUNCTION type ID L_PAR functionsHelp R_PAR L_KEY variables statements R_KEY

    MAIN            reduce using rule 7 (functions -> .)
    FUNCTION        shift and go to state 8

    functions                      shift and go to state 7

state 6

    (5) variables -> VAR . type ID DOT_COMMA variables
    (6) variables -> VAR . type ID L_BRACK INTEGER R_BRACK DOT_COMMA variables
    (14) type -> . INT
    (15) type -> . DECIM
    (16) type -> . BOOL
    (17) type -> . CHAR
    (18) type -> . STRING
    (19) type -> . VOID

    INT             shift and go to state 10
    DECIM           shift and go to state 11
    BOOL            shift and go to state 12
    CHAR            shift and go to state 13
    STRING          shift and go to state 14
    VOID            shift and go to state 15

    type                           shift and go to state 9

state 7

    (1) program -> PROGRAM ID L_KEY variables functions . mainBody R_KEY
    (2) mainBody -> . MAIN L_PAR R_PAR L_KEY variables statements R_KEY

    MAIN            shift and go to state 17

    mainBody                       shift and go to state 16

state 8

    (8) functions -> FUNCTION . type ID L_PAR functionsHelp R_PAR L_KEY variables statements R_KEY
    (14) type -> . INT
    (15) type -> . DECIM
    (16) type -> . BOOL
    (17) type -> . CHAR
    (18) type -> . STRING
    (19) type -> . VOID

    INT             shift and go to state 10
    DECIM           shift and go to state 11
    BOOL            shift and go to state 12
    CHAR            shift and go to state 13
    STRING          shift and go to state 14
    VOID            shift and go to state 15

    type                           shift and go to state 18

state 9

    (5) variables -> VAR type . ID DOT_COMMA variables
    (6) variables -> VAR type . ID L_BRACK INTEGER R_BRACK DOT_COMMA variables

    ID              shift and go to state 19


state 10

    (14) type -> INT .

    ID              reduce using rule 14 (type -> INT .)


state 11

    (15) type -> DECIM .

    ID              reduce using rule 15 (type -> DECIM .)


state 12

    (16) type -> BOOL .

    ID              reduce using rule 16 (type -> BOOL .)


state 13

    (17) type -> CHAR .

    ID              reduce using rule 17 (type -> CHAR .)


state 14

    (18) type -> STRING .

    ID              reduce using rule 18 (type -> STRING .)


state 15

    (19) type -> VOID .

    ID              reduce using rule 19 (type -> VOID .)


state 16

    (1) program -> PROGRAM ID L_KEY variables functions mainBody . R_KEY

    R_KEY           shift and go to state 20


state 17

    (2) mainBody -> MAIN . L_PAR R_PAR L_KEY variables statements R_KEY

    L_PAR           shift and go to state 21


state 18

    (8) functions -> FUNCTION type . ID L_PAR functionsHelp R_PAR L_KEY variables statements R_KEY

    ID              shift and go to state 22


state 19

    (5) variables -> VAR type ID . DOT_COMMA variables
    (6) variables -> VAR type ID . L_BRACK INTEGER R_BRACK DOT_COMMA variables

    DOT_COMMA       shift and go to state 23
    L_BRACK         shift and go to state 24


state 20

    (1) program -> PROGRAM ID L_KEY variables functions mainBody R_KEY .

    $end            reduce using rule 1 (program -> PROGRAM ID L_KEY variables functions mainBody R_KEY .)


state 21

    (2) mainBody -> MAIN L_PAR . R_PAR L_KEY variables statements R_KEY

    R_PAR           shift and go to state 25


state 22

    (8) functions -> FUNCTION type ID . L_PAR functionsHelp R_PAR L_KEY variables statements R_KEY

    L_PAR           shift and go to state 26


state 23

    (5) variables -> VAR type ID DOT_COMMA . variables
    (4) variables -> .
    (5) variables -> . VAR type ID DOT_COMMA variables
    (6) variables -> . VAR type ID L_BRACK INTEGER R_BRACK DOT_COMMA variables

    FUNCTION        reduce using rule 4 (variables -> .)
    MAIN            reduce using rule 4 (variables -> .)
    ID              reduce using rule 4 (variables -> .)
    IF              reduce using rule 4 (variables -> .)
    WHILE           reduce using rule 4 (variables -> .)
    PRINT           reduce using rule 4 (variables -> .)
    READ            reduce using rule 4 (variables -> .)
    COMMENT_LINE    reduce using rule 4 (variables -> .)
    RETURN          reduce using rule 4 (variables -> .)
    R_KEY           reduce using rule 4 (variables -> .)
    VAR             shift and go to state 6

    variables                      shift and go to state 27

state 24

    (6) variables -> VAR type ID L_BRACK . INTEGER R_BRACK DOT_COMMA variables

    INTEGER         shift and go to state 28


state 25

    (2) mainBody -> MAIN L_PAR R_PAR . L_KEY variables statements R_KEY

    L_KEY           shift and go to state 29


state 26

    (8) functions -> FUNCTION type ID L_PAR . functionsHelp R_PAR L_KEY variables statements R_KEY
    (9) functionsHelp -> .
    (10) functionsHelp -> . type ID
    (11) functionsHelp -> . type ID COMMA functionsHelp2
    (14) type -> . INT
    (15) type -> . DECIM
    (16) type -> . BOOL
    (17) type -> . CHAR
    (18) type -> . STRING
    (19) type -> . VOID

    R_PAR           reduce using rule 9 (functionsHelp -> .)
    INT             shift and go to state 10
    DECIM           shift and go to state 11
    BOOL            shift and go to state 12
    CHAR            shift and go to state 13
    STRING          shift and go to state 14
    VOID            shift and go to state 15

    type                           shift and go to state 30
    functionsHelp                  shift and go to state 31

state 27

    (5) variables -> VAR type ID DOT_COMMA variables .

    FUNCTION        reduce using rule 5 (variables -> VAR type ID DOT_COMMA variables .)
    MAIN            reduce using rule 5 (variables -> VAR type ID DOT_COMMA variables .)
    ID              reduce using rule 5 (variables -> VAR type ID DOT_COMMA variables .)
    IF              reduce using rule 5 (variables -> VAR type ID DOT_COMMA variables .)
    WHILE           reduce using rule 5 (variables -> VAR type ID DOT_COMMA variables .)
    PRINT           reduce using rule 5 (variables -> VAR type ID DOT_COMMA variables .)
    READ            reduce using rule 5 (variables -> VAR type ID DOT_COMMA variables .)
    COMMENT_LINE    reduce using rule 5 (variables -> VAR type ID DOT_COMMA variables .)
    RETURN          reduce using rule 5 (variables -> VAR type ID DOT_COMMA variables .)
    R_KEY           reduce using rule 5 (variables -> VAR type ID DOT_COMMA variables .)


state 28

    (6) variables -> VAR type ID L_BRACK INTEGER . R_BRACK DOT_COMMA variables

    R_BRACK         shift and go to state 32


state 29

    (2) mainBody -> MAIN L_PAR R_PAR L_KEY . variables statements R_KEY
    (4) variables -> .
    (5) variables -> . VAR type ID DOT_COMMA variables
    (6) variables -> . VAR type ID L_BRACK INTEGER R_BRACK DOT_COMMA variables

    ID              reduce using rule 4 (variables -> .)
    IF              reduce using rule 4 (variables -> .)
    WHILE           reduce using rule 4 (variables -> .)
    PRINT           reduce using rule 4 (variables -> .)
    READ            reduce using rule 4 (variables -> .)
    COMMENT_LINE    reduce using rule 4 (variables -> .)
    RETURN          reduce using rule 4 (variables -> .)
    R_KEY           reduce using rule 4 (variables -> .)
    VAR             shift and go to state 6

    variables                      shift and go to state 33

state 30

    (10) functionsHelp -> type . ID
    (11) functionsHelp -> type . ID COMMA functionsHelp2

    ID              shift and go to state 34


state 31

    (8) functions -> FUNCTION type ID L_PAR functionsHelp . R_PAR L_KEY variables statements R_KEY

    R_PAR           shift and go to state 35


state 32

    (6) variables -> VAR type ID L_BRACK INTEGER R_BRACK . DOT_COMMA variables

    DOT_COMMA       shift and go to state 36


state 33

    (2) mainBody -> MAIN L_PAR R_PAR L_KEY variables . statements R_KEY
    (20) statements -> .
    (21) statements -> . statement statements
    (22) statement -> .
    (23) statement -> . assignment DOT_COMMA
    (24) statement -> . functionCall DOT_COMMA
    (25) statement -> . ifBlock
    (26) statement -> . whileBlock
    (27) statement -> . print DOT_COMMA
    (28) statement -> . read DOT_COMMA
    (29) statement -> . lineComment
    (30) statement -> . return DOT_COMMA
    (32) assignment -> . idCall ASSIGN megaExp
    (33) assignment -> . idCall ASSIGN functionCall
    (34) assignment -> . assignIncr
    (35) assignment -> . assignDecr
    (38) functionCall -> . ID L_PAR functionCallParams R_PAR
    (43) ifBlock -> . IF L_PAR megaExp R_PAR body optionalElse
    (46) whileBlock -> . WHILE L_PAR megaExp R_PAR body
    (74) print -> . PRINT L_PAR print_help R_PAR
    (80) read -> . READ L_PAR idCall R_PAR
    (81) lineComment -> . COMMENT_LINE ALPHANUMERIC END_LINE
    (31) return -> . RETURN megaExp
    (72) idCall -> . ID
    (73) idCall -> . ID L_BRACK exp R_BRACK
    (36) assignIncr -> . idCall INCREMENT
    (37) assignDecr -> . idCall DECREMENT

  ! reduce/reduce conflict for R_KEY resolved using rule 20 (statements -> .)
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for COMMENT_LINE resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
    R_KEY           reduce using rule 20 (statements -> .)
    ID              shift and go to state 50
    IF              shift and go to state 51
    WHILE           shift and go to state 52
    PRINT           shift and go to state 53
    READ            shift and go to state 54
    COMMENT_LINE    shift and go to state 55
    RETURN          shift and go to state 56

  ! ID              [ reduce using rule 22 (statement -> .) ]
  ! IF              [ reduce using rule 22 (statement -> .) ]
  ! WHILE           [ reduce using rule 22 (statement -> .) ]
  ! PRINT           [ reduce using rule 22 (statement -> .) ]
  ! READ            [ reduce using rule 22 (statement -> .) ]
  ! COMMENT_LINE    [ reduce using rule 22 (statement -> .) ]
  ! RETURN          [ reduce using rule 22 (statement -> .) ]
  ! R_KEY           [ reduce using rule 22 (statement -> .) ]

    statements                     shift and go to state 37
    statement                      shift and go to state 38
    assignment                     shift and go to state 39
    functionCall                   shift and go to state 40
    ifBlock                        shift and go to state 41
    whileBlock                     shift and go to state 42
    print                          shift and go to state 43
    read                           shift and go to state 44
    lineComment                    shift and go to state 45
    return                         shift and go to state 46
    idCall                         shift and go to state 47
    assignIncr                     shift and go to state 48
    assignDecr                     shift and go to state 49

state 34

    (10) functionsHelp -> type ID .
    (11) functionsHelp -> type ID . COMMA functionsHelp2

    R_PAR           reduce using rule 10 (functionsHelp -> type ID .)
    COMMA           shift and go to state 57


state 35

    (8) functions -> FUNCTION type ID L_PAR functionsHelp R_PAR . L_KEY variables statements R_KEY

    L_KEY           shift and go to state 58


state 36

    (6) variables -> VAR type ID L_BRACK INTEGER R_BRACK DOT_COMMA . variables
    (4) variables -> .
    (5) variables -> . VAR type ID DOT_COMMA variables
    (6) variables -> . VAR type ID L_BRACK INTEGER R_BRACK DOT_COMMA variables

    FUNCTION        reduce using rule 4 (variables -> .)
    MAIN            reduce using rule 4 (variables -> .)
    ID              reduce using rule 4 (variables -> .)
    IF              reduce using rule 4 (variables -> .)
    WHILE           reduce using rule 4 (variables -> .)
    PRINT           reduce using rule 4 (variables -> .)
    READ            reduce using rule 4 (variables -> .)
    COMMENT_LINE    reduce using rule 4 (variables -> .)
    RETURN          reduce using rule 4 (variables -> .)
    R_KEY           reduce using rule 4 (variables -> .)
    VAR             shift and go to state 6

    variables                      shift and go to state 59

state 37

    (2) mainBody -> MAIN L_PAR R_PAR L_KEY variables statements . R_KEY

    R_KEY           shift and go to state 60


state 38

    (21) statements -> statement . statements
    (20) statements -> .
    (21) statements -> . statement statements
    (22) statement -> .
    (23) statement -> . assignment DOT_COMMA
    (24) statement -> . functionCall DOT_COMMA
    (25) statement -> . ifBlock
    (26) statement -> . whileBlock
    (27) statement -> . print DOT_COMMA
    (28) statement -> . read DOT_COMMA
    (29) statement -> . lineComment
    (30) statement -> . return DOT_COMMA
    (32) assignment -> . idCall ASSIGN megaExp
    (33) assignment -> . idCall ASSIGN functionCall
    (34) assignment -> . assignIncr
    (35) assignment -> . assignDecr
    (38) functionCall -> . ID L_PAR functionCallParams R_PAR
    (43) ifBlock -> . IF L_PAR megaExp R_PAR body optionalElse
    (46) whileBlock -> . WHILE L_PAR megaExp R_PAR body
    (74) print -> . PRINT L_PAR print_help R_PAR
    (80) read -> . READ L_PAR idCall R_PAR
    (81) lineComment -> . COMMENT_LINE ALPHANUMERIC END_LINE
    (31) return -> . RETURN megaExp
    (72) idCall -> . ID
    (73) idCall -> . ID L_BRACK exp R_BRACK
    (36) assignIncr -> . idCall INCREMENT
    (37) assignDecr -> . idCall DECREMENT

  ! reduce/reduce conflict for R_KEY resolved using rule 20 (statements -> .)
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for COMMENT_LINE resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
    R_KEY           reduce using rule 20 (statements -> .)
    ID              shift and go to state 50
    IF              shift and go to state 51
    WHILE           shift and go to state 52
    PRINT           shift and go to state 53
    READ            shift and go to state 54
    COMMENT_LINE    shift and go to state 55
    RETURN          shift and go to state 56

  ! ID              [ reduce using rule 22 (statement -> .) ]
  ! IF              [ reduce using rule 22 (statement -> .) ]
  ! WHILE           [ reduce using rule 22 (statement -> .) ]
  ! PRINT           [ reduce using rule 22 (statement -> .) ]
  ! READ            [ reduce using rule 22 (statement -> .) ]
  ! COMMENT_LINE    [ reduce using rule 22 (statement -> .) ]
  ! RETURN          [ reduce using rule 22 (statement -> .) ]
  ! R_KEY           [ reduce using rule 22 (statement -> .) ]

    statement                      shift and go to state 38
    statements                     shift and go to state 61
    assignment                     shift and go to state 39
    functionCall                   shift and go to state 40
    ifBlock                        shift and go to state 41
    whileBlock                     shift and go to state 42
    print                          shift and go to state 43
    read                           shift and go to state 44
    lineComment                    shift and go to state 45
    return                         shift and go to state 46
    idCall                         shift and go to state 47
    assignIncr                     shift and go to state 48
    assignDecr                     shift and go to state 49

state 39

    (23) statement -> assignment . DOT_COMMA

    DOT_COMMA       shift and go to state 62


state 40

    (24) statement -> functionCall . DOT_COMMA

    DOT_COMMA       shift and go to state 63


state 41

    (25) statement -> ifBlock .

    ID              reduce using rule 25 (statement -> ifBlock .)
    IF              reduce using rule 25 (statement -> ifBlock .)
    WHILE           reduce using rule 25 (statement -> ifBlock .)
    PRINT           reduce using rule 25 (statement -> ifBlock .)
    READ            reduce using rule 25 (statement -> ifBlock .)
    COMMENT_LINE    reduce using rule 25 (statement -> ifBlock .)
    RETURN          reduce using rule 25 (statement -> ifBlock .)
    R_KEY           reduce using rule 25 (statement -> ifBlock .)


state 42

    (26) statement -> whileBlock .

    ID              reduce using rule 26 (statement -> whileBlock .)
    IF              reduce using rule 26 (statement -> whileBlock .)
    WHILE           reduce using rule 26 (statement -> whileBlock .)
    PRINT           reduce using rule 26 (statement -> whileBlock .)
    READ            reduce using rule 26 (statement -> whileBlock .)
    COMMENT_LINE    reduce using rule 26 (statement -> whileBlock .)
    RETURN          reduce using rule 26 (statement -> whileBlock .)
    R_KEY           reduce using rule 26 (statement -> whileBlock .)


state 43

    (27) statement -> print . DOT_COMMA

    DOT_COMMA       shift and go to state 64


state 44

    (28) statement -> read . DOT_COMMA

    DOT_COMMA       shift and go to state 65


state 45

    (29) statement -> lineComment .

    ID              reduce using rule 29 (statement -> lineComment .)
    IF              reduce using rule 29 (statement -> lineComment .)
    WHILE           reduce using rule 29 (statement -> lineComment .)
    PRINT           reduce using rule 29 (statement -> lineComment .)
    READ            reduce using rule 29 (statement -> lineComment .)
    COMMENT_LINE    reduce using rule 29 (statement -> lineComment .)
    RETURN          reduce using rule 29 (statement -> lineComment .)
    R_KEY           reduce using rule 29 (statement -> lineComment .)


state 46

    (30) statement -> return . DOT_COMMA

    DOT_COMMA       shift and go to state 66


state 47

    (32) assignment -> idCall . ASSIGN megaExp
    (33) assignment -> idCall . ASSIGN functionCall
    (36) assignIncr -> idCall . INCREMENT
    (37) assignDecr -> idCall . DECREMENT

    ASSIGN          shift and go to state 67
    INCREMENT       shift and go to state 68
    DECREMENT       shift and go to state 69


state 48

    (34) assignment -> assignIncr .

    DOT_COMMA       reduce using rule 34 (assignment -> assignIncr .)


state 49

    (35) assignment -> assignDecr .

    DOT_COMMA       reduce using rule 35 (assignment -> assignDecr .)


state 50

    (38) functionCall -> ID . L_PAR functionCallParams R_PAR
    (72) idCall -> ID .
    (73) idCall -> ID . L_BRACK exp R_BRACK
